--- a/srctools/views/main.ejs
+++ b/srctools/views/main.ejs
@@ -7,11 +7,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="/build/style.css"/>
+    <link rel="stylesheet" href="<$-cssPath$>"/>
 </head>
 <body>
 <div id="content">
 </div>
-<script type="text/javascript" src="/build/qianmi-app-e279af3f853d8520ad0e.js"></script>
+<script type="text/javascript" src="<$=app$>"></script>
 </body>
 </html>
